# franken_agent_detection

./: Cargo.toml
src/connectors/: aider.rs  amp.rs  chatgpt.rs  claude_code.rs  clawdbot.rs  cline.rs  codex.rs  copilot.rs  copilot_cli.rs  cursor.rs  factory.rs  gemini.rs  kimi.rs  openclaw.rs  opencode.rs  pi_agent.rs  qwen.rs  scan.rs  vibe.rs
